--- a/templates/asan/asan_form.css
+++ b/templates/asan/asan_form.css
@@ -1,42 +1,3 @@
-@font-face {
-    font-family: 'Roboto';
-    src: url(../src/fonts/Roboto/Roboto-Regular.ttf);
-}
-
-@font-face {
-    font-family: 'Formular';
-    src: url('../src/fonts/Formular/formular-regular.ttf');
-    font-style: normal;
-    font-weight: normal;
-}
-
-@font-face {
-    font-family: 'Formular';
-    src: url('../src/fonts/Formular/formular-medium.ttf');
-    font-style: normal;
-    font-weight: 500;
-}
-
-@font-face {
-    font-family: 'Formular';
-    src: url('../src/fonts/Formular/formular-bold.ttf');
-    font-style: normal;
-    font-weight: bold;
-}
-
-@page {
-    size: A3;
-    margin: 30px 0;
-}
-
-html,
 body {
-    width: 100%;
-    padding: 10px;
-    margin: 0;
-    font-family: 'Formular', 'Roboto', Arial, sans-serif;
-    font-size: 15px;
-    line-height: 24px;
-    color: #343836;
+  background-color: black;
 }
-
